radio: fix* footer on mobile
*using a magic number... :(

--- a/style.css
+++ b/style.css
@@ -301,4 +301,8 @@ footer > span a:hover {
   body.frosted {
     opacity: 1;
   }
+
+  footer {
+    width: 108%; /* magic number... :/ */
+  }
 }
